--- a/css/styles.css
+++ b/css/styles.css
@@ -280,6 +280,7 @@ color: var(--accent-color);
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    padding-bottom: 30px;
 }
     
 .team-grid .grid-item {
@@ -296,11 +297,12 @@ color: var(--accent-color);
     font-size: 16px;
     line-height: 1.18;
     margin-bottom: 10px;
+    margin-top: 30px;
     text-align: center;
 }
     
 .text-team {
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     text-align: center;
 }
 
