--- a/css/styles.css
+++ b/css/styles.css
@@ -564,8 +564,12 @@ font-size: 16px;
 line-height: 1.88;
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link {
+    display: block;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
      0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
